--- a/css/styles.css
+++ b/css/styles.css
@@ -2446,3 +2446,52 @@ a {
   background-color: #ffffff;
   color: #000000;
 }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+  70% {
+    transform: translateY(30px);
+  }
+  90% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes bounce-back {
+  0% {
+    transform: translateY(0);
+  }
+  70% {
+    transform: translateY(-10px);
+  }
+  90% {
+    transform: translateY(30px);
+  }
+  100% {
+    transform: translateY(-2000px);
+  }
+}
+
+.modal-show {
+  display: flex;
+  animation: bounce 0.6s;
+}
+
+.modal-close {
+  display: none;
+  animation: bounce-back 0.6s;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  /*display: none;*/
+  animation: bounce-back 1.6s;
+}
